<?xml version="1.0"?>
<package>
  <name>quadtreemap</name>
  <version>0.0.0</version>

  <description>
    Plane Fitting for DX.
  </description>

  <maintainer email="hxz18801168722@163.com">Junyi Ma</maintainer>

  <license>BSD</license>

  <author email="hxz18801168722@163.com">Junyi Ma</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl_conversions</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>pcl_conversions</run_depend>

  <export>
  </export>
</package>
